<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/pet3_3"
    tools:context=".ui.fragments.profile.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="parent">

        <LinearLayout
            android:paddingTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nombre:"
                android:paddingLeft="40dp"
                android:paddingBottom="5dp"
                android:textSize="40dp"
                android:textStyle="bold"
                android:fontFamily="@font/telescope"/>
            <TextView
                android:id="@+id/profile_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre_usuario"
                android:paddingLeft="40dp"
                android:paddingBottom="5dp"
                android:textSize="30dp"
                android:textStyle="bold"
                android:fontFamily="@font/telescope"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Email:"
                android:paddingLeft="40dp"
                android:paddingBottom="5dp"
                android:textSize="40dp"
                android:textStyle="bold"
                android:fontFamily="@font/telescope"/>
            <TextView
                android:id="@+id/profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/correo_usuario"
                android:paddingLeft="40dp"
                android:paddingBottom="5dp"
                android:textSize="30dp"
                android:textStyle="bold"
                android:fontFamily="@font/telescope"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCerrarSesion"
                style="@style/PrimaryButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="100dp"
                android:text="@string/cerrar_sesion"
                android:textColor="#212121"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBorrarCuenta"
                style="@style/PrimaryButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="40dp"
                android:text="@string/borrar_cuenta"
                android:textColor="#212121"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>