<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4e3d7"
    tools:context=".ui.recoverypass.ForgotPasswordActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRecoverPass"
        style="@style/FormTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            style="@style/FormEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_recover"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textColorHighlight="@color/error_dark"
            android:textColorHint="#757575"
            tools:layout_editor_absoluteX="-20dp"
            tools:layout_editor_absoluteY="171dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRecoverPass"
        style="@style/PrimaryButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="17dp"
        android:layout_marginTop="36dp"
        android:text="@string/recovery_pass"
        android:textColor="#212121"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilRecoverPass" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        style="@style/CaptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="216dp"
        android:paddingHorizontal="50dp"
        android:text="@string/recoverpass_subtitle"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="204dp"
        android:layout_height="170dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/pass2_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>