<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4e3d7"
    tools:context=".ui.fragments.pets.UpdatePetActivity">
  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center"
          android:orientation="vertical"
          android:visibility="visible">
        <TextView
            android:id="@+id/tvUpdateTitleAdd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Actualiza"
            android:gravity="center"
            android:textStyle="bold"
            android:fontFamily="@font/telescope"
            android:textSize="40sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="parent"/>
        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:cardCornerRadius="70dp">

          <ImageView
              android:background="#f4e3d7"
              android:id="@+id/update_pet_photo"
              android:scaleType="centerCrop"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              app:srcCompat="@drawable/ic_addpet2" />
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

          <Button
              android:id="@+id/update_btn_photo"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:backgroundTint="@color/primary"
              android:drawableLeft="@drawable/ic_edit"
              android:text="Photo" />


        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

          <com.google.android.material.textfield.TextInputLayout
              android:id="@+id/update_tilEspecie"
              style="@style/FormTextInputLayout2"
              android:layout_width="0dp"
              android:layout_height="60dp"
              android:layout_marginTop="12dp"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/update_etEspecie"
                style="@style/FormEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_especie"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textColorHighlight="@color/error_dark"
                android:textColorHint="#757575" />
          </com.google.android.material.textfield.TextInputLayout>

          <com.google.android.material.textfield.TextInputLayout
              android:id="@+id/update_tilNamePet"
              style="@style/FormTextInputLayout2"
              android:layout_width="0dp"
              android:layout_height="60dp"
              android:layout_marginTop="12dp"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/update_tilEspecie">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/update_etPetName"
                style="@style/FormEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_petname"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textColorHighlight="@color/error_dark"
                android:textColorHint="#8D6E63" />
          </com.google.android.material.textfield.TextInputLayout>
          <com.google.android.material.textfield.TextInputLayout
              android:id="@+id/update_tilDatePet"
              style="@style/FormTextInputLayout2"
              android:layout_width="0dp"
              android:layout_height="60dp"
              android:layout_marginTop="10dp"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/update_tilNamePet">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/update_etDatepet"
                style="@style/FormEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/add_datapicker"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textColorHighlight="@color/error_dark"
                android:textColorHint="#757575" />
          </com.google.android.material.textfield.TextInputLayout>
          <androidx.appcompat.widget.AppCompatTextView
              android:id="@+id/update_tvGenre"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toBottomOf="@+id/update_tilDatePet"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              android:text="¿Es macho o hembra?"
              android:fontFamily="@font/telescope"
              android:textSize="20sp"
              android:paddingLeft="28sp"
              android:paddingRight="20sp"
              android:paddingTop="10sp"/>


          <com.google.android.material.textfield.TextInputLayout
              android:id="@+id/update_dropdown_menu"
              style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="5dp"
              app:boxCornerRadiusBottomEnd="20sp"
              app:boxCornerRadiusBottomStart="20sp"
              app:boxCornerRadiusTopEnd="20sp"
              app:boxCornerRadiusTopStart="20sp"
              android:gravity="center_vertical"
              app:boxStrokeColor="#f4e3d7"
              app:boxStrokeWidth="3dp"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/update_tvGenre">

            <AutoCompleteTextView
                android:id="@+id/update_tvauto_complete"
                style="@style/FormEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:hint="@string/item_petLabel"
                android:inputType="none"
                android:singleLine="true"
                android:maxLines="1"
                android:padding="12dp" />
          </com.google.android.material.textfield.TextInputLayout>

          <com.google.android.material.textfield.TextInputLayout
              android:id="@+id/update_tilRaza"
              style="@style/FormTextInputLayout2"
              android:layout_width="0dp"
              android:layout_height="60dp"
              android:layout_marginTop="12dp"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/update_dropdown_menu">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/update_etRaza"
                style="@style/FormEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_raza"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textColorHighlight="@color/error_dark"
                android:textColorHint="#757575" />
          </com.google.android.material.textfield.TextInputLayout>

          <com.google.android.material.textfield.TextInputLayout
              android:id="@+id/update_tilSobretumascota"
              style="@style/FormTextInputLayout3"
              android:layout_width="match_parent"
              android:layout_height="120dp"
              android:layout_marginTop="12dp"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/update_tilRaza">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/update_etSobretumascota"
                style="@style/FormEditText3"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:hint="@string/add_sobretumascota"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textColorHighlight="@color/error_dark"
                android:textColorHint="#8D6E63" />
          </com.google.android.material.textfield.TextInputLayout>

          <LinearLayout
              android:id="@+id/linear_btn"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="10dp"
              android:gravity="center"
              app:layout_constraintLeft_toRightOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/update_tilSobretumascota">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/update_btn_cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_bottom_nav_rounded"
                android:text="Cancelar"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:fontFamily="@font/telescope"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/update_btn_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/bg_bottom_nav_rounded"
                android:text="Actualizar"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:fontFamily="@font/telescope"/>
          </LinearLayout>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              app:layout_constraintTop_toBottomOf="@+id/linear_btn"
              android:text="..."
              android:layout_marginTop="7dp"
              android:visibility="invisible">
          </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>
      </LinearLayout>
    </LinearLayout>
  </ScrollView>

  </androidx.constraintlayout.widget.ConstraintLayout>